defaults changed for privacy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
+    <string name="button_clear_cache">clear cache</string>
     <string name="app_name">Lightning</string>
     <string name="action_new_tab">New Tab</string>
     <string name="action_share">Share</string>
